[tool.poetry]
name = "wpp-chatbot"
version = "0.1.0"
description = ""
authors = ["peace <jose.s.contacto@gmail.com>"]
readme = "README.md"
packages = [{include = "wpp_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
